# atsp

./: .gitignore  CMakeLists.txt  README.md  ideas.txt  main.cpp  makefile  matrixreader.cpp  matrixreader.hpp  menu.cpp  menu.hpp  plots.py  plots_e2.py
algorithms/: atspsolver.hpp  bb_atsp.cpp  bb_atsp.hpp  bf_atsp.cpp  bf_atsp.hpp  ga_atsp.cpp  ga_atsp.hpp  sa_atsp.cpp  sa_atsp.hpp
data_structures/: vector.cpp  vector.hpp
utils/: utils.hpp
